--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,7 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "SQLConnection": "Server=sqldb00.database.windows.net,1433;Initial Catalog=appdb;Persist Security Info=False;User ID=dbadmin;Password=Password$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCerttificate=False;Connection Timeout=30;"
-  }}
+  "AllowedHosts": "*"
+}
