--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conn": "Server=sqldb00.database.windows.net,1433;Initial Catalog=appdb;Persist Security Info=False;User ID=dbadmin;Password=Password$;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
